@@ -1,5 +1,36 @@
-bin_SCRIPTS=	ntp-wait ntptrace
-noinst_SCRIPTS=	calc_tickadj checktime freq_adj html2man mkver ntpsweep ntpver plot_summary summary
-EXTRA_DIST = VersionName cvo.sh fixautomakedepsmagic genCommitLog	\
-	genver hpadjtime.sh monitoring ntp-close ntp-groper ntp-restart	\
-	ntp-status rc1 rc2 stats
+NULL=
+
+bin_SCRIPTS =			\
+	ntp-wait		\
+	ntptrace		\
+	$(NULL)
+
+noinst_SCRIPTS =		\
+	calc_tickadj		\
+	checktime		\
+	freq_adj		\
+	html2man		\
+	mkver			\
+	ntpsweep		\
+	ntpver			\
+	plot_summary		\
+	summary			\
+	$(NULL)
+
+EXTRA_DIST =			\
+	cvo.sh			\
+	fixautomakedepsmagic	\
+	genCommitLog		\
+	genver			\
+	hpadjtime.sh		\
+	monitoring		\
+	ntp-close		\
+	ntp-groper		\
+	ntp-restart		\
+	ntp-status		\
+	rc1			\
+	rc2			\
+	stats			\
+	UpdatePoint		\
+	VersionName		\
+	$(NULL)
