@@ -1,12 +1,27 @@
 #! /bin/sh
  
+packageinfo=packageinfo.sh
+case "$#" in
+ 2)
+    case "$1" in
+     -p|--packageinfo)
+	packageinfo=$2
+    esac
+    ;;
+ 0)
+    ;;
+ *) echo "Usage: $0 [-p packageinfo.sh]"
+    exit 1
+    ;;
+esac
+
 # This script must be executed from the TLD of the source tree...
-. ./packageinfo.sh
+. $packageinfo
 
 NAME="$version"
 case $point in
- [0-9]*)
-    NAME="${NAME}p$point"
+ [1-9]*)
+    NAME="${NAME}p${point}"
     ;;
  NEW) ;;
  '') ;;
@@ -17,24 +32,23 @@ esac
 
 case $special in
  '') ;;
- *) NAME="${NAME}-$special" ;;
+ *) NAME="${NAME}-${special}" ;;
 esac
 
-case $releasecandidate in
- [Nn][Oo]) ;;
- [Yy][Ee][Ss]) NAME="${NAME}-RC" ;;
- *) echo "Unexpected value for 'releasecandidate' <$releasecandidate>!"
-    exit 1
+case "$prerelease::$repotype" in
+ ''::*)
     ;;
-esac
-
-case $repotype in
- stable)
-    case $rcpoint in
-     [0-9]*)
-	NAME="${NAME}$rcpoint"
-	;;
-    esac
+ beta::stable)
+    NAME="${NAME}-beta${betapoint}"
+    ;;
+ rc::dev|RC::dev)
+    NAME="${NAME}-RC"
+    ;;
+ rc::stable|RC::stable)
+    NAME="${NAME}-RC${rcpoint}"
+    ;;
+ *) echo "Unexpected value for 'prerelease::repotype' <$prerelease::$repotype>!"
+    exit 1
     ;;
 esac
 
