@@ -1,4 +1,8 @@
 ---
+
+* Build infrastructure updates to enable beta releases of ntp-stable.
+
+---
 (4.2.6) 2009/12/09 Released by Harlan Stenn <stenn@ntp.org>
 * Include (4.2.4p8) - [Sec 1331] DoS with mode 7 packets - CVE-2009-3563.
 * [Bug 508] Fixed leap second handling for Windows.
